// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileShareDisplay component renders properly 1`] = `
<ActivityShareThumbnail
  file={
    Object {
      "displayName": "testImage.js",
      "image": true,
      "url": "http://cisco.com",
    }
  }
  isFetching={false}
  isPending={false}
  objectUrl="http://cisco.com"
  onDownloadClick={[MockFunction]}
  type="chat"
/>
`;

exports[`FileShareDisplay component renders properly while pending 1`] = `
<ActivityShareThumbnail
  file={
    Object {
      "displayName": "testImage.js",
      "image": true,
      "url": "http://cisco.com",
    }
  }
  isFetching={false}
  isPending={true}
  objectUrl="http://cisco.com"
  onDownloadClick={[MockFunction]}
  type="chat"
/>
`;
